--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -116,7 +116,7 @@ kbd {
             padding: 0 5px;
             border: none;
             outline: none;
-            background-color: var(--ca-gray9);
+            background-color: transparent;
             border-radius: 3px;
             flex-flow: row;
             align-items: center;
